Ajuste no codigo

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <div class="intro-content display-table">
             <div class="table-cell">
                 <div class="container">
-                    <h4 class="display-6 color-d fontGlobal">Conferência</h4>
+                    <h4 class="display-6 color-d space-top fontGlobal">Conferência Diflen</h4>
                     <h1 class="intro-title mb-4 fontGlobal">WE ARE GLOBAL</h1>
-                    <p class="intro-subtitle space"><span class="text-slider-items">Discipulando,e Formando,Lideres,Em nações,Somos todos Diflen</span><strong class="text-slider"></strong></p>
+                    <p class="intro-subtitle space-bottom"><span class="text-slider-items">Discipulando,e Formando,Lideres,Em nações,Somos todos Diflen</span><strong class="text-slider"></strong></p>
                     <h2 class="mb-4 fontGlobal light subtitleGlobal">15 e 16 de Novembro 2019</h2>
                     <a class="nav-link js-scroll" href="#subscriber">
                         <button class="button button-a button-big button-rouded">Faça sua inscrição</button>
@@ -137,7 +137,7 @@
                         <p class="lead"><b>Nossa missão é</b> inspirar e levantar jovens, para que sejam verdadeiros discípulos de Cristo, e que, de acordo com seu potencial, talento e chamado, sejam influentes em todas as esferas da sociedade e em todas as nações. Portanto ide, fazei discípulos de todas as nações, batizando-os em nome do Pai, e do Filho, e do Espírito Santo; Ensinando-os a guardar todas as coisas que eu vos tenho mandado; e eis que eu estou convosco todos os dias, até a consumação dos séculos. Amém. Mateus 28:19,20.</p>
                     </div>
                     <!-- 16:9 aspect ratio -->
-                    <div class="embed-responsive embed-responsive-16by9 space">
+                    <div class="embed-responsive embed-responsive-16by9 space-bottom">
                         <iframe src="https://www.youtube.com/embed/fjdgxAg9tD0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
@@ -304,7 +304,7 @@
                                 </div>
                             </div>
                         </div>
-                        <iframe class="space" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.002939125009!2d-46.698205685020056!3d-23.675852884626142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce51b45342eeb5%3A0x70279f2e7a00e04f!2sIgreja+Apost%C3%B3lica+Novidade+de+Vida!5e0!3m2!1spt-BR!2sbr!4v1555184611675!5m2!1spt-BR!2sbr" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe class="space-bottom" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.002939125009!2d-46.698205685020056!3d-23.675852884626142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce51b45342eeb5%3A0x70279f2e7a00e04f!2sIgreja+Apost%C3%B3lica+Novidade+de+Vida!5e0!3m2!1spt-BR!2sbr!4v1555184611675!5m2!1spt-BR!2sbr" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
