--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <p class="lead"><strong>Nossa missão é</strong> inspirar e levantar jovens para que sejam verdadeiros discípulos de Cristo, e que, de acordo com seu potencial, talento e chamado, sejam influentes em todas as esferas da sociedade e em todas as nações. Portanto ide, fazei discípulos de todas as nações, batizando-os em nome do Pai, e do Filho, e do Espírito Santo; Ensinando-os a guardar todas as coisas que eu vos tenho mandado; e eis que eu estou convosco todos os dias, até a consumação dos séculos. Amém. Mateus 28:19,20. <br /><br /><strong>DIFLEN - Discipulando e formando lideres em nações</strong></p>
                         <br /><br />
                         <h4 class="display-6 fontGlobal">Diflen Global</h4>
-                        <p class="lead">Nossa conferência reune jovens de todo Brasil e de todo mundo para trocar experiências, crescer espiritualmente, estabelecer relacionamentos, com muitas palavras que edificam, workshops e programações incríveis com vários convidados nacionais e internacionais. <br /><br /><strong>Confira o que rolou na conferência do ano passado:</strong></p>
+                        <p class="lead">Nossa conferência reúne jovens de todo Brasil e de todo mundo para trocar experiências, crescer espiritualmente, estabelecer relacionamentos, com muitas palavras que edificam, workshops e programações incríveis com vários convidados nacionais e internacionais. <br /><br /><strong>Confira o que rolou na conferência do ano passado:</strong></p>
                     </div>
                     <!-- 16:9 aspect ratio -->
                     <div class="embed-responsive embed-responsive-16by9 space-bottom">
@@ -155,7 +155,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="title-box text-center">
-                        <h3 class="title-a fontGlobal">Preletores</h3>
+                        <h3 class="title-a fontGlobal">Preletores Confirmados</h3>
                         <p class="subtitle-a">Veja os preletores convidados para conferência</p>
                         <div class="line-mf"></div>
                     </div>
@@ -174,7 +174,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="box">
-                        <img src="img/abe.png"></img>
+                        <img src="img/anderson.png"></img>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -204,7 +204,7 @@
                 <div class="col-sm-12">
                     <div class="title-box text-center">
                         <h3 class="title-a fontGlobal">Bandas</h3>
-                        <p class="subtitle-a">Veja as bandas que estaram na conferência</p>
+                        <p class="subtitle-a">Veja as bandas que estarão na conferência</p>
                         <div class="line-mf"></div>
                     </div>
                 </div>
@@ -255,8 +255,10 @@
                                 <ul class="list-unstyled mt-3 mb-4">
                                     <li>Compre agora</li>
                                 </ul>
-                                <h1 class="card-title pricing-card-title">R$50,00</h1>
-                                <button class="button button-a button-big button-rouded my-4">Faça sua inscrição</button>
+                                <h1 class="card-title pricing-card-title">R$100,00</h1>
+                                <a target=”_blank” href="https://www.e-inscricao.com/diflen/diflen-global/">
+                                  <button class="button button-a button-big button-rouded my-4">Faça sua inscrição</button>
+                                </a>
                             </div>
                         </div>
 
@@ -268,7 +270,7 @@
                                 <ul class="list-unstyled mt-3 mb-4">
                                     <li>Compre agora</li>
                                 </ul>
-                                <h1 class="card-title pricing-card-title">R$100,00</h1>
+                                <h1 class="card-title pricing-card-title">R$150,00</h1>
                                 <button class="button button-disable button-big button-rouded my-4" disabled>Bloqueado</button>
                             </div>
                         </div>
@@ -281,7 +283,7 @@
                                 <ul class="list-unstyled mt-3 mb-4">
                                     <li>Compre agora</li>
                                 </ul>
-                                <h1 class="card-title pricing-card-title">R$150,00</h1>
+                                <h1 class="card-title pricing-card-title">R$200,00</h1>
                                 <button class="button button-disable button-big button-rouded my-4" disabled>Bloqueado</button>
                             </div>
                         </div>
