--- a/index.html
+++ b/index.html
@@ -165,31 +165,22 @@
                 <div class="col-md-4">
                     <div class="box">
                         <img src="img/nelson.png"></img>
+                        <h4 class="display-7 text-center fontGlobal">Pr. Nelson Junior</h4>
+                        <p class="subtitle-a text-center">Pastor, escritor, palestrante, capelão internacional, coordenador e idealizador do movimento Eu escolhi esperar. Bacharel em Teologia, Mestrado em Comportamento e Pós Graduado em Gestão e Liderança.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="box">
                         <img src="img/isaias.png"></img>
+                            <h4 class="display-7 text-center fontGlobal">Pr. Isaías Huber</h4>
+                            <p class="subtitle-a text-center">Líder internacional do movimento DIFLEN. Pastor de jovens há muitos anos, ele tem atuado na missão de inspirar e levantar jovens, para que sejam influentes em todas as esferas da sociedade e em todas as nações.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="box">
                         <img src="img/anderson.png"></img>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="box">
-                        <img src="img/nelson.png"></img>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="box">
-                        <img src="img/nelson.png"></img>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="box">
-                        <img src="img/nelson.png"></img>
+                            <h4 class="display-7 text-center fontGlobal">Pr. Anderson Silva</h4>
+                            <p class="subtitle-a text-center">Pastor sênior da Igreja Vivo por Ti, escritor, formado pelo Centro de Treinamento Rhema Brasil, líder apostólico da Igreja Em Movimento. Líder mobilizador do Entre Amigos, clube de mentoria para jovens pastores.</p>
                     </div>
                 </div>
             </div>
@@ -289,6 +280,12 @@
                         </div>
                     </div>
                     <!--/ Table Price End /-->
+                    <h4 class="display-7 text-center space-top light fontGlobal">Algumas Informações</h4><br />
+                    <p class="subtitle-a light text-center">O valor da inscrição é individual e pode ser pago no boleto, cartão de crédito ou de débito.</p>
+                    <p class="subtitle-a light text-center">Crianças até 11 anos não pagam.</p>
+                    <p class="subtitle-a light text-center">As vagas são limitadas.</p>
+                    <p class="subtitle-a light text-center">Não inclui hospedagem e transporte. As inscrições encerram no dia 10/Novembro.</p>
+                    <p class="subtitle-a light text-center">Política de reembolso e cancelamento: somente até 7 dias antes do evento será devolvido o valor integral pago.</p>
 
                 </div>
             </div>
@@ -349,6 +346,9 @@
 
         <!-- Countdown -->
         <script src="js/countdown.js"></script>
+
+<script>
+</script>
 
 </body>
 </html>
