--- a/index.html
+++ b/index.html
@@ -227,15 +227,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="row">
-                        <div class="col-sm-12">
                             <div class="title-box text-center">
                                 <h3 class="title-a light fontGlobal">Quanto custa?</h3>
                                 <p class="subtitle-a light">Garanta seu ingresso agora!</p>
                                 <div class="line-mf"></div>
                             </div>
-                        </div>
-                    </div>
                     <!--/ Table Price Init /-->
                     <div class="card-deck mb-3 text-center">
                         <div class="card mb-4 shadow-sm">
@@ -281,12 +277,17 @@
                     </div>
                     <!--/ Table Price End /-->
                     <h4 class="display-7 text-center space-top light fontGlobal">Algumas Informações</h4><br />
-                    <p class="subtitle-a light text-center">O valor da inscrição é individual e pode ser pago no boleto, cartão de crédito ou de débito.</p>
-                    <p class="subtitle-a light text-center">Crianças até 11 anos não pagam.</p>
-                    <p class="subtitle-a light text-center">As vagas são limitadas.</p>
-                    <p class="subtitle-a light text-center">Não inclui hospedagem e transporte. As inscrições encerram no dia 10/Novembro.</p>
-                    <p class="subtitle-a light text-center">Política de reembolso e cancelamento: somente até 7 dias antes do evento será devolvido o valor integral pago.</p>
-
+                    <div class="row">
+                        <div class="col-1"></div>
+                            <div class="col-10">
+                                <p class="subtitle-a light text-center">O valor da inscrição é individual e pode ser pago no boleto, cartão de crédito ou de débito.</p>
+                                <p class="subtitle-a light text-center">Crianças até 11 anos não pagam.</p>
+                                <p class="subtitle-a light text-center">As vagas são limitadas.</p>
+                                <p class="subtitle-a light text-center">Não inclui hospedagem e transporte. As inscrições encerram no dia 10/Novembro.</p>
+                                <p class="subtitle-a light text-center">Política de reembolso e cancelamento: somente até 7 dias antes do evento será devolvido o valor integral pago.</p>
+                            </div>
+                        <div class="col-1"></div>
+                    </div>
                 </div>
             </div>
         </div>
