--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                 <div class="title-box text-center">
                                     <h3 class="title-a light fontGlobal">Onde Será?</h3>
                                     <p class="subtitle-a light">Igreja Apostólica Novidade de Vida</p>
-                                    <p>Av. Eng. Eusébio Stevaux, 1159 - Jurubatuba, São Paulo - SP, 04696-000</p>
+                                    <p>Av. Eng. Eusébio Stevaux, 1159 - Jurubatuba, São Paulo - SP</p>
                                     <div class="line-mf"></div>
                                 </div>
                             </div>
