--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="col-sm-12">
                     <div class="title-box text-center">
                         <h3 class="title-a fontGlobal">Preletores Confirmados</h3>
-                        <p class="subtitle-a">Veja os preletores convidados no momento</p>
+                        <p class="subtitle-a">Veja os preletores convidados até o momento...</p>
                         <div class="line-mf"></div>
                     </div>
                 </div>
