--- a/index.html
+++ b/index.html
@@ -181,6 +181,21 @@
                         <p class="subtitle-a text-center">Líder internacional do movimento DIFLEN. Pastor de jovens há muitos anos, ele tem atuado na missão de inspirar e levantar jovens, para que sejam influentes em todas as esferas da sociedade e em todas as nações.</p>
                     </div>
                 </div>
+
+                <div class="col-md-6">
+                    <div class="box">
+                        <img src="img/lucinho.png"></img>
+                        <h4 class="display-7 text-center fontGlobal">Pr. Lucinho Barreto</h4>
+                        <p class="subtitle-a text-center">Lúcio Barreto Júnior é pastor na Igreja Batista da Lagoinha e tem livros publicados. Os mais conhecidos são: “O Manual de sobrevivência para o jovem cristão”, “As 100 dicas para pregadores Loucos por Jesus” e a série de três volumes “Loucos por Jesus” em que conta o testemunho de inúmeros cristãos que foram perseguidos por causa do nome de Cristo. O sucesso e a grande repercussão desta série tem inspirado milhares a também viver um cristianismo acima da média.</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="box">
+                        <img src="img/michael.png"></img>
+                        <h4 class="display-7 text-center fontGlobal">Pr. Michael Brodeur</h4>
+                        <p class="subtitle-a text-center">Sou o autor da Cultura do Avivamento: Preparando a Igreja para o Próximo Grande Despertar (publicado pela Regal). Este livro inclui um capítulo de idéias profundas de Bill Johnson, o líder da Igreja de Betel e dois capítulos de Banning Liebscher, diretor de cultura de Jesus, onde eu servi como diretor do projeto de cultura: uma estratégia de orientação de quarenta anos para levantar amanhã líderes. Além disso, dou aulas no Bethel School of Supernatural Ministry em Redding, Califórnia, e presto serviços de consultoria para várias igrejas e organizações em todo o mundo.</p>
+                    </div>
+                </div>
                 <!--/
                 <div class="col-md-4">`
                     <div class="box">
@@ -194,6 +209,33 @@
         </div>
     </section>
     <!--/ Section Preletores End /-->
+
+    <!--/ Section Banda Init /-->
+    <section id="workshop" class="portfolio-mf sect-pt4 route">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="title-box text-center">
+                        <h3 class="title-a fontGlobal">Workshops</h3>
+                        <p class="subtitle-a">Veja os preletores que estarão nos Workshops</p>
+                        <div class="line-mf"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="box">
+                        <img src="img/workshops.png"></img>
+                    </div>
+                </div>
+            </div>
+            <div class="title-box text-center">
+                <h4 class="display-7 text-center fontGlobal">E muitos outros...</h4>
+                <p class="subtitle-a">Em breve mais preletores</p>
+            </div>
+        </div>
+    </section>
+    <!--/ Section Banda End /-->
 
     <!--/ Section Banda Init /-->
     <section id="bandas" class="portfolio-mf sect-pt4 route">
