--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <div class="box">
                         <img src="img/lucinho.png"></img>
                         <h4 class="display-7 text-center fontGlobal">Pr. Lucinho Barreto</h4>
-                        <p class="subtitle-a text-center">Lúcio Barreto Júnior é pastor na Igreja Batista da Lagoinha. Pai da Emily e do Davi, Pr. Lucinho, dedica sua vida para evangelizar, preparar e equipar jovens e igrejas para falar do amor de Jesus e a viver este amor com intensidade. Junto com sua família, realiza diversas viagens missionárias e ações sociais a fim de levar o amor de Deus – seja por meio do serviço, seja pela própria palavra divina. Já viajou para o Índia, Haiti, Jordânia e Nepal.</p>
+                        <p class="subtitle-a text-center">Lúcio Barreto Júnior é pastor na Igreja Batista da Lagoinha. Casado com Patrícia Barreto, pai da Emily e do Davi, Pr. Lucinho, dedica sua vida para evangelizar, preparar e equipar jovens e igrejas para falar do amor de Jesus e a viver este amor com intensidade. Junto com sua família, realiza diversas viagens missionárias e ações sociais a fim de levar o amor de Deus – seja por meio do serviço, seja pela própria palavra divina. Já viajou para o Índia, Haiti, Jordânia e Nepal.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
