--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a class="nav-link js-scroll" href="#about">Movimento</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll" href="#preletores">Preletores</a>
+                        <a class="nav-link js-scroll" href="#preletores">Convidados</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll" href="#bandas">Bandas</a>
@@ -143,11 +143,11 @@
                         <h4 class="display-6 fontGlobal">Diflen Global</h4>
                         <p class="lead">Nossa conferência reúne jovens de todo Brasil e de todo mundo para trocar experiências, crescer espiritualmente, estabelecer relacionamentos, com muitas palavras que edificam, workshops e programações incríveis com vários convidados nacionais e internacionais.
                             <br />
-                            <br /><strong>Confira o que rolou na conferência do ano passado:</strong></p>
+                            <br /><strong>Teaser We are Global</strong></p>
                     </div>
                     <!-- 16:9 aspect ratio -->
                     <div class="embed-responsive embed-responsive-16by9 space-bottom">
-                        <iframe src="https://www.youtube.com/embed/fjdgxAg9tD0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/w9I-fKVKJ3Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -160,33 +160,39 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="title-box text-center">
-                        <h3 class="title-a fontGlobal">Preletores Confirmados</h3>
-                        <p class="subtitle-a">Veja os preletores convidados até o momento...</p>
+                        <h3 class="title-a fontGlobal">Convidados Confirmados</h3>
+                        <p class="subtitle-a">Veja os convidados até o momento...</p>
                         <div class="line-mf"></div>
                     </div>
                 </div>
             </div>
             <div class="row">
+                    <div class="col-md-6">
+                            <div class="box">
+                                <img src="img/zoe.png"></img>
+                                <h4 class="display-7 text-center fontGlobal">Zoe Lilly</h4>
+                                <p class="subtitle-a text-center">Zoe é uma artista e usa seus dons para impactar a sociedade, levando amor, paz e esperança por onde passa. Seu desejo é ver verdadeiros adoradores que ama o Senhor e tem intimidade com Ele, e vivem além do que apenas os seus olhos físicos enxergam. Para isso, além de ministrar adoração, Zoe realiza workshops para equipar líderes e ministros de louvor e adoração em toda a igreja brasileira.</p>        
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                                <div class="box">
+                                    <img src="img/lucinho.png"></img>
+                                    <h4 class="display-7 text-center fontGlobal">Pr. Lucinho Barreto</h4>
+                                    <p class="subtitle-a text-center">Lúcio Barreto Júnior é pastor na Igreja Batista da Lagoinha. Casado com Patrícia Barreto, pai da Emily e do Davi, Pr. Lucinho, dedica sua vida para evangelizar, preparar e equipar jovens e igrejas para falar do amor de Jesus e a viver este amor com intensidade. Junto com sua família, realiza diversas viagens missionárias e ações sociais a fim de levar o amor de Deus – seja por meio do serviço, seja pela própria palavra divina. Já viajou para o Índia, Haiti, Jordânia e Nepal.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                    <div class="box">
+                                        <img src="img/isaias.png"></img>
+                                        <h4 class="display-7 text-center fontGlobal">Pr. Isaías Huber</h4>
+                                        <p class="subtitle-a text-center">Líder internacional do movimento DIFLEN. Pastor de jovens há muitos anos, ele tem atuado na missão de inspirar e levantar jovens, para que sejam influentes em todas as esferas da sociedade e em todas as nações.</p>
+                                    </div>
+                                </div>
                 <div class="col-md-6">
                     <div class="box">
                         <img src="img/nelson.png"></img>
                         <h4 class="display-7 text-center fontGlobal">Pr. Nelson Junior</h4>
                         <p class="subtitle-a text-center">Pastor, escritor, palestrante, capelão internacional, coordenador e idealizador do movimento Eu escolhi esperar. Bacharel em Teologia, Mestrado em Comportamento e Pós Graduado em Gestão e Liderança.</p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="box">
-                        <img src="img/isaias.png"></img>
-                        <h4 class="display-7 text-center fontGlobal">Pr. Isaías Huber</h4>
-                        <p class="subtitle-a text-center">Líder internacional do movimento DIFLEN. Pastor de jovens há muitos anos, ele tem atuado na missão de inspirar e levantar jovens, para que sejam influentes em todas as esferas da sociedade e em todas as nações.</p>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="box">
-                        <img src="img/lucinho.png"></img>
-                        <h4 class="display-7 text-center fontGlobal">Pr. Lucinho Barreto</h4>
-                        <p class="subtitle-a text-center">Lúcio Barreto Júnior é pastor na Igreja Batista da Lagoinha. Casado com Patrícia Barreto, pai da Emily e do Davi, Pr. Lucinho, dedica sua vida para evangelizar, preparar e equipar jovens e igrejas para falar do amor de Jesus e a viver este amor com intensidade. Junto com sua família, realiza diversas viagens missionárias e ações sociais a fim de levar o amor de Deus – seja por meio do serviço, seja pela própria palavra divina. Já viajou para o Índia, Haiti, Jordânia e Nepal.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -210,14 +216,14 @@
     </section>
     <!--/ Section Preletores End /-->
 
-    <!--/ Section Banda Init /-->
+    <!--/ Section Atracoes /-->
     <section id="workshop" class="portfolio-mf sect-pt4 route">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
                     <div class="title-box text-center">
-                        <h3 class="title-a fontGlobal">Workshops</h3>
-                        <p class="subtitle-a">Veja os preletores que estarão nos Workshops</p>
+                        <h3 class="title-a fontGlobal">Mais atrações</h3>
+                        <p class="subtitle-a">Veja mais convidados que estarão na conferência</p>
                         <div class="line-mf"></div>
                     </div>
                 </div>
@@ -231,11 +237,11 @@
             </div>
             <div class="title-box text-center">
                 <h4 class="display-7 text-center fontGlobal">E muitos outros...</h4>
-                <p class="subtitle-a">Em breve mais preletores</p>
+                <p class="subtitle-a">Em breve mais convidados</p>
             </div>
         </div>
     </section>
-    <!--/ Section Banda End /-->
+    <!--/ Section Atracoes End /-->
 
     <!--/ Section Banda Init /-->
     <section id="bandas" class="portfolio-mf sect-pt4 route">
@@ -250,17 +256,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
-                    <div class="box">
-                        <img src="img/zoe.png"></img>
-                    </div>
-                </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="box">
                         <img src="img/daniel.png"></img>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="box">
                         <img src="img/diflenMusic.png"></img>
                     </div>
@@ -388,6 +389,20 @@
                     </div>
                     <iframe class="space-bottom" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.002939125009!2d-46.698205685020056!3d-23.675852884626142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce51b45342eeb5%3A0x70279f2e7a00e04f!2sIgreja+Apost%C3%B3lica+Novidade+de+Vida!5e0!3m2!1spt-BR!2sbr!4v1555184611675!5m2!1spt-BR!2sbr" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
+        </div>
+        <div class="row">
+                <div class="col-sm-12">
+        <div class="title-box text-center">
+                <h3 class="title-a light fontGlobal">Confira o que no Diflen Global 2018</h3>
+                <div class="line-mf"></div>
+            </div>
+            </div>
+            </div>
+        <!-- 16:9 aspect ratio -->
+        <div class="embed-responsive embed-responsive-16by9 space-bottom">
+            <iframe src="https://www.youtube.com/embed/fjdgxAg9tD0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
             </div>
         </div>
 
