--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         <div class="row">
                 <div class="col-sm-12">
         <div class="title-box text-center">
-                <h3 class="title-a light fontGlobal">Confira o que no Diflen Global 2018</h3>
+                <h4 class="title-a light fontGlobal">Confira o que rolou no Diflen Global 2018</h4>
                 <div class="line-mf"></div>
             </div>
             </div>
